[package]
name = "pipe_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-serial = { version = "*", features = ["libudev"] }
tokio-util = { version ="0.7",default_features=false,features = ["codec"] }
bytes = { version="1",default_features=false,features = []  }
log = "0.4.14"                                           # for logging
simplelog = "*"                                          # for logging
env_logger = "0.11.0"
chrono = "0.4.19"                                        # for time
regex="*"
serde = { version = "1.0", features = ["derive"] }
minicbor = { version = "0.24.0", features=["derive","std"] }
cobs={ version = "0.2.3", default_features=false,features = [] }
crc = { version = "3.0.1", features = [] }

[features]
default=["tokio"]
tokio=[]